Fix various layout issues for main page and Dashboard

--- a/packages/frontend/src/App.module.css
+++ b/packages/frontend/src/App.module.css
@@ -1,6 +1,10 @@
 .app {
-    width: 100%;
-    height: 100%;
+    display: flex;
+    flex-direction: column;
 
-    border: 1px solid purple;
+    margin: auto;
+
+    width: calc(100% - (0.8rem * 2));
+    height: calc(100% - (0.8rem * 2));
+    padding: 0.8rem;
 }
