--- a/packages/frontend/src/index.css
+++ b/packages/frontend/src/index.css
@@ -22,6 +22,7 @@
     background-color: rgb(22, 22, 22);
 
     width: 100%;
+    height: 100%;
     min-height: 100vh;
 
     padding: 0rem;
@@ -34,20 +35,21 @@
     -webkit-text-size-adjust: 100%;
 }
 
-body {
-    align-self: center;
-
+body,
+body > #root {
     display: flex;
     flex-direction: column;
     justify-content: center;
-
-    padding: 0.8rem;
-    margin: 0rem auto;
+    
+    margin: auto;
 
     width: 100%;
+    height: 100%;
+}
+
+body > #root {
     max-width: 1280px;
     min-width: 1000px;
-    height: 100%;
 }
 
 .no-select {
