--- a/packages/frontend/src/pages/Dashboard/index.module.css
+++ b/packages/frontend/src/pages/Dashboard/index.module.css
@@ -14,20 +14,20 @@
 
     width: 100%;
     height: 100%;
+    max-height: calc(1000px + (0.6rem * 2));
+    min-height: calc(800px + (0.6rem * 2));
+    margin: auto;
 }
 
 .container {
-    align-self: center;
-
     display: grid;
     grid-template-columns: repeat(2, auto) 1fr;
     gap: 0.75rem;
 
     background-color: rgb(44, 44, 44);
     
-    width: auto;
-    height: 100%;
-    min-height: 500px;
+    width: calc(100% - (0.6rem * 2));
+    height: calc(100% - (0.6rem * 2));
     padding: 0.6rem;
 
     opacity: 0%;
